--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "private": true,
     "version": "0.0.1",
     "type": "module",
+    "packageManager": "pnpm@10.17.1",
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
@@ -17,50 +21,52 @@
         "db:migrate:staging": "wrangler d1 migrations apply gaming-booker-dev --remote",
         "db:migrate:prod": "wrangler d1 migrations apply gaming-booker --remote",
         "db:studio": "drizzle-kit studio",
-        "deploy": "pnpm run build && wrangler deploy",
-        "cf-typegen": "wrangler types ./src/worker-configuration.d.ts"
+        "cf:deploy": "pnpm run build && wrangler deploy",
+        "cf:typegen": "wrangler types ./src/worker-configuration.d.ts"
     },
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20250919.0",
-        "@eslint/compat": "^1.3.2",
+        "@cloudflare/workers-types": "^4.20250924.0",
+        "@eslint/compat": "^1.4.0",
         "@eslint/js": "^9.36.0",
+        "@iconify-json/mdi": "^1.2.3",
         "@iconify-json/ri": "^1.2.5",
-        "@iconify-json/simple-icons": "^1.2.52",
+        "@iconify-json/simple-icons": "^1.2.53",
         "@libsql/client": "^0.15.15",
         "@sveltejs/adapter-cloudflare": "^7.2.3",
-        "@sveltejs/kit": "^2.42.2",
-        "@sveltejs/vite-plugin-svelte": "^6.2.0",
+        "@sveltejs/kit": "^2.43.4",
+        "@sveltejs/vite-plugin-svelte": "^6.2.1",
         "@tailwindcss/forms": "^0.5.10",
-        "@tailwindcss/typography": "^0.5.18",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.13",
         "@types/luxon": "^3.7.1",
         "@types/node": "^24.5.2",
-        "bits-ui": "^2.10.0",
-        "daisyui": "^5.1.13",
+        "bits-ui": "^2.11.4",
+        "daisyui": "^5.1.18",
         "drizzle-kit": "^0.31.4",
         "drizzle-zod": "^0.8.3",
         "eslint": "^9.36.0",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-svelte": "^3.12.3",
+        "eslint-plugin-svelte": "^3.12.4",
         "globals": "^16.4.0",
         "luxon": "^3.7.2",
+        "nanoid": "^5.1.6",
         "prettier": "^3.6.2",
         "prettier-plugin-svelte": "^3.4.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "runed": "^0.31.1",
-        "svelte": "^5.39.3",
-        "svelte-check": "^4.3.1",
+        "runed": "^0.34.0",
+        "svelte": "^5.39.6",
+        "svelte-check": "^4.3.2",
         "svelte-html-modal": "^3.1.1",
         "svelte-modals": "^2.0.1",
         "svelte-sonner": "^1.0.5",
         "tailwindcss": "^4.1.13",
         "typescript": "^5.9.2",
-        "typescript-eslint": "^8.44.0",
+        "typescript-eslint": "^8.44.1",
         "unplugin-icons": "^22.3.0",
-        "vite": "^7.1.6",
+        "vite": "^7.1.7",
         "vite-plugin-devtools-json": "^1.0.0",
         "vite-plugin-mkcert": "^1.17.8",
-        "zod": "^4.1.9"
+        "zod": "^4.1.11"
     },
     "dependencies": {
         "@fullcalendar/core": "^6.1.19",
@@ -68,7 +74,7 @@
         "@fullcalendar/interaction": "^6.1.19",
         "@fullcalendar/list": "^6.1.19",
         "@fullcalendar/timegrid": "^6.1.19",
-        "better-auth": "^1.3.13",
+        "better-auth": "^1.3.17",
         "drizzle-orm": "^0.44.5",
         "remove": "^0.1.5"
     },
