--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "svelte-html-modal": "^3.2.0",
         "svelte-modals": "^2.0.1",
         "svelte-sonner": "^1.0.5",
+        "svelte-trix": "^0.0.6",
         "tailwindcss": "^4.1.16",
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.46.2",
